# Agenda

./: CMakeLists.txt
.cache/clangd/index/: Book.cpp.C911293C2321BE0B.idx  Book.hpp.175F94CEE25ECBC5.idx  Contact.cpp.CD5223DD949AA41D.idx  Contact.hpp.F80E10826D1D932F.idx  Notas.cpp.CA3647F1E28AF54D.idx  Notes.hpp.62943A5DDE0274F6.idx  bank.cpp.75F5F216C2E79ACA.idx  bank.hpp.A302CB7913F536A2.idx  sql.hpp.E5725137DC637A28.idx  test_datas.cpp.53B391A0F5BABBEF.idx  test_db.cpp.8085081F0D02D78C.idx
data/: create_db.sql
doc/: README.md
hrd/: Book.hpp  Contact.hpp  Notes.hpp
include/: Contact.hpp
include/datas/: Book.hpp  Contact.hpp  Notes.hpp
include/db/: Arq.hpp  Bank.hpp  Sql.hpp  arq.hpp  bank.hpp  sql.hpp
src/: Book.cpp  CMakeLists.txt  Contact.cpp  Notas.cpp
src/datas/: Book.cpp  CMakeLists.txt  Contact.cpp  Notas.cpp
src/db/: Arq.cpp  Bank.cpp  arq.cpp  bank.cpp
test/: CMakeLists.txt  test_contact.cpp  test_datas.cpp  test_db.cpp
